--- a/recipes-core/busybox/files/base.cfg
+++ b/recipes-core/busybox/files/base.cfg
@@ -270,7 +270,7 @@ CONFIG_IPROUTE=y
 CONFIG_IPRULE=y
 CONFIG_IPTUNNEL=y
 CONFIG_KBD_MODE=y
-CONFIG_KILLALL5=y
+#CONFIG_KILLALL5=y
 #CONFIG_LAST=y
 CONFIG_LAST_SUPPORTED_WCHAR=767
 CONFIG_LAST_SYSTEM_ID=999
