--- a/conf/machine/qcs605.conf
+++ b/conf/machine/qcs605.conf
@@ -24,6 +24,10 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 
+
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 # Change Image features for systemd.
 IMAGE_DEV_MANAGER = "udev"
 IMAGE_INIT_MANAGER = "systemd"
