--- a/conf/machine/qcs405-som1.conf
+++ b/conf/machine/qcs405-som1.conf
@@ -12,6 +12,9 @@ SYSTEMRW_SIZE_EXT4 ?= "8388608"
 USERDATA_SIZE_EXT4 ?= "2000000000"
 CACHE_SIZE_EXT4 ?= "80000000"
 
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
 # Formats of root filesystem images.
 IMAGE_FSTYPES += "ext4"
 RECOVERY_IMAGE = "0"
