--- a/conf/distro/robot-som-ros.conf
+++ b/conf/distro/robot-som-ros.conf
@@ -10,3 +10,11 @@ PRODUCT = "robot-som"
 SYSTEM_SIZE_EXT4 = "838860800"
 
 PREFERRED_VERSION_v4l-utils = "1.6.2"
+
+KERNEL_DTS_NAME = "*8*09"
+
+KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=qcom ehci-hcd.park=3 msm_rtb.filter=0x37 lpm_levels.sleep_disabled=1 rootwait androidboot.bootdevice=7824900.sdhci mem=512M"
+
+PREFERRED_VERSION_linux-msm = "4.9"
+
+SERIAL_CONSOLE = "115200 ttyMSM0"
