--- a/conf/machine/qcs605.conf
+++ b/conf/machine/qcs605.conf
@@ -35,3 +35,10 @@ IMAGE_INITSCRIPTS = ""
 
 # Disable journalling for RO rootfs. Set the block size to 1024.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
+
+# Multilib configuration
+# This sets any packages preprended with lib32- to be built with
+# the armv7a tuning (32 bit) instead of 64 bit aarch.
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "armv7a-neon"
