--- a/recipes-core/busybox/files/mdev.conf
+++ b/recipes-core/busybox/files/mdev.conf
@@ -25,6 +25,7 @@ i2c.* 0:3011 0660 @/etc/mdev/iio.sh
 vcs.* 0:5 0660
 zero 0:0 0666
 hwrng 10:183 0660 =hw_random
+pps.* 0:0 0664
 
 pcm.* 0:0 0660 =snd/
 control.* 0:0 0660 =snd/
