--- a/conf/distro/robot-som-ros.conf
+++ b/conf/distro/robot-som-ros.conf
@@ -18,3 +18,10 @@ KERNEL_CMD_PARAMS = "noinitrd ro console=ttyMSM0,115200,n8 androidboot.hardware=
 PREFERRED_VERSION_linux-msm = "4.9"
 
 SERIAL_CONSOLE = "115200 ttyMSM0"
+
+# enable audio as a loadable kernel module
+DISTRO_FEATURES_append = " audio-dlkm"
+
+DISTRO_FEATURES_append = " ab-boot-support"
+
+
