--- a/conf/machine/sdxpoorwills.conf
+++ b/conf/machine/sdxpoorwills.conf
@@ -13,3 +13,7 @@ KERNEL_CONFIG = "${@['sdxpoorwills-perf_defconfig', 'sdxpoorwills_defconfig'][d.
 
 KERNEL_CMD_PARAMS = "noinitrd ro rootwait console=ttyMSM0,115200,n8 androidboot.hardware=qcom msm_rtb.filter=0x37 androidboot.console=ttyMSM0 lpm_levels.sleep_disabled=1  firmware_class.path=/lib/firmware/updates"
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
+
+DISTRO_FEATURES += " selinux"
+DISTRO_FEATURES_FILTER_NATIVE  += " selinux"
+DEFAULT_ENFORCING = "permissive"
