--- a/conf/machine/qcs605-32.conf
+++ b/conf/machine/qcs605-32.conf
@@ -14,11 +14,13 @@ KERNEL_TAGS_OFFSET = "0x81900000"
 
 KERNEL_CONFIG = "${@['sdm670-perf_defconfig', 'sdm670_defconfig'][d.getVar('VARIANT', True) == ('' or 'debug')]}"
 
-KERNEL_CMD_PARAMS = "console=ttyMSM0,115200n8 earlycon=msm_geni_serial,0xA84000 androidboot.hardware=qcom androidboot.console=ttyMSM0 video=vfb:640x400,bpp=32,memsize=3072000 msm_rtb.filter=0x237 ehci-hcd.park=3 lpm_levels.sleep_disabled=1 service_locator.enable=1 androidboot.selinux=permissive firmware_class.path=/lib/firmware/updates"
+KERNEL_CMD_PARAMS = "console=ttyMSM0,115200n8 earlycon=msm_geni_serial,0xA84000 androidboot.hardware=qcom androidboot.console=ttyMSM0 video=vfb:640x400,bpp=32,memsize=3072000 msm_rtb.filter=0x237 ehci-hcd.park=3 lpm_levels.sleep_disabled=1 service_locator.enable=1 firmware_class.path=/lib/firmware/updates"
+
 KERNEL_CMD_PARAMS_remove = "${@bb.utils.contains_any('VARIANT', 'perf user', 'console=ttyMSM0,115200,n8 androidboot.console=ttyMSM0', '', d)}"
 
 # readonly-rootfs
 DISTRO_FEATURES_append = " ro-rootfs"
+
 # Use systemd init manager.
 DISTRO_FEATURES_remove = "sysvinit"
 DISTRO_FEATURES_append = " systemd"
@@ -26,6 +28,9 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_dev_manager = "udev"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 
+#enable selinux
+DISTRO_FEATURES_append = " selinux"
+DEFAULT_ENFORCING = "permissive"
 
 # enable audio as a loadable kernel module
 DISTRO_FEATURES_append = " audio-dlkm"
@@ -38,7 +43,10 @@ IMAGE_INITSCRIPTS = ""
 # Disable journalling for RO rootfs. Set the block size to 1024.
 IMAGE_EXT4_EXTRA_OPTIONS = "${@bb.utils.contains('DISTRO_FEATURES','ro-rootfs',' -J -b 1024 ','',d)}"
 
-#Need for compiling UEFI for aarch64
+# Multilib configuration
+# This sets any packages preprended with lib64- to be built with
+# the aarch64 tuning (64 bit) instead of 64 bit aarch.
+# Need for compiling UEFI for aarch64
 require conf/multilib.conf
 MULTILIBS = "multilib:lib64"
 DEFAULTTUNE_virtclass-multilib-lib64 = "aarch64"
